# UsefulTools

./: .gitignore  API_Test.py  CompareTwoLists.py  DuplicateFiles.py  Lotus_Emailer.py  NOT DuplicateFiles.py  Pipfile  README.md  SQL_From_Pandas_DF_Example.py  SQL_Pooled_Connection_Obj.py  SQL_Tools.py  SameNameFiles.py  Solving Problems Statistically vs. Computationally.py  SpeedTest_Test.py  TwitterAPI.py  chocolately_setup.ps1  chocolatey_setup.ps1  get_song_data.py  gmail_clean_up_script.py  gmail_cleanup_config.json  hash_cash.py  music_file_management.py  pandas_df_to_sql_example.py  rsync_Videos_with_PI.sh  utils.py  zip_file_downloader.py
Address Verification/: verify.py
Database Exploration/: LinkedServerExploration.py  SQL Server Tables Summary.sql  SQLServerExploration.py
Database Exploration/DB2/: DB2_Connection  requirements.txt
File Management/: DuplicateFiles.py  Makefile  NOT DuplicateFiles.py  SameNameFiles.py  clean_up_link_files.py  consolidate_files.py  copy_files.py  delete_files.py  remove_dead_links.py  remove_empty_directories.py  remove_files.py
Internet Speed Test/: IP_Regex.py  log_speedtest.py  speedTest-cli.py
Internet Speed Test/stress_test/: stress_test.py
R Library/: DataExploration.R
WordFrequency/: BagOfWords.py  CollectionsCounter.py
address-verify/: README.md  pyproject.toml
address-verify/examples/: batch_verify.py
address-verify/src/address_verify/: __init__.py  cli.py  client.py  csv_processor.py  models.py
address-verify/tests/: test_client.py  test_csv_processor.py
bash_aliases/: init.sh  readme.org
bash_aliases/src/: aliases.sh  awschangeprofile.sh  awsclilogin.sh  awsrole.sh  gb.sh  gbdelete.sh  gbprune.sh  gcam.sh  gchanges.sh  gclean.sh  gdiff.sh  geach.sh  gopen.sh  gpr.sh  gprf.sh  gpus.sh  gpusnv.sh  grp.sh  gst.sh  gtoggle.sh  gurl.sh  ll.sh  ls.sh  pi.sh  pystart.sh  pystop.sh  pytest.sh  pyvenv.sh  reload.sh  tree.sh  unzip.sh  variables.sh  web.sh  zip.sh
gmail-cleanup-saas/: GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  start-dev.sh
gmail-cleanup-saas/docs/: README.md  cli-usage.md  getting-started.md  library-usage.md
gmail-cleanup-saas/examples/: advanced_usage.py  basic_usage.py  rules_examples.json
gmail-cleanup-saas/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gmail-cleanup-saas/frontend/src/: App.vue  main.js  style.css
gmail-cleanup-saas/frontend/src/components/: Charts.vue  DataTable.vue  Modal.vue  Toast.vue
gmail-cleanup-saas/frontend/src/router/: index.js
gmail-cleanup-saas/frontend/src/stores/: analysis.js  auth.js  processing.js  rules.js
gmail-cleanup-saas/frontend/src/utils/: api.js  formatters.js
gmail-cleanup-saas/frontend/src/views/: Analysis.vue  Dashboard.vue  Login.vue  Processing.vue  Rules.vue
gmail-cleanup-saas/src/gmail_cleanup/: __init__.py
gmail-cleanup-saas/src/gmail_cleanup/api/: dependencies.py  main.py  models.py
gmail-cleanup-saas/src/gmail_cleanup/api/routers/: analysis.py  auth.py  processing.py  rules.py
gmail-cleanup-saas/src/gmail_cleanup/auth/: oauth.py
gmail-cleanup-saas/src/gmail_cleanup/cli/: __init__.py  main.py
gmail-cleanup-saas/src/gmail_cleanup/core/: client.py  processor.py
gmail-cleanup-saas/src/gmail_cleanup/lib/: __init__.py
gmail-cleanup-saas/src/gmail_cleanup/rules/: engine.py  models.py  templates.py
openCV_POC/: Image_Testing.py  Video_Testing.py
