[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "address-verify"
version = "0.1.0"
description = "Address verification using Lob API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lob-python>=5.1.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
]

[project.scripts]
address-verify = "address_verify.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/address_verify"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']
